syntax = "proto3";

package bridge.v1;

option go_package = "gateway";

message CreateRequest {
	string name = 1;
}

message Keys {
	string    id = 1;
	string secret = 2;
}

message Security {
	repeated string    white_list_domains = 1;
	repeated string white_list_ips = 2;
}

message Addresses {
	string    wrap_to_address = 1;
	string 	  minting_address = 2;
}

message CreateResponse {
	string id = 1;
	string name = 2;
	Keys keys = 3;
}

message UpdateRequest {
	string id = 1;
	string name = 2;
	Addresses addresses = 3;
	Security security = 4;
}

message UpdateResponse {
	bool success = 1;
}

message DeleteRequest {
	string id = 1;
}

message DeleteResponse {
	bool success = 1;
}

service ProjectService {
  rpc Create(CreateRequest) returns (CreateResponse) {};

  rpc Update(UpdateRequest) returns (UpdateResponse) {};

  rpc Delete(DeleteRequest) returns (DeleteResponse) {};
}
